[package]
name = "polyglot-observer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
linemux = "0.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
regex = "1"
config = "0.13"
toml = "0.5"
serde_json = "1.0"
glob = "0.3"